# plockalyser

./: .gitignore  Byggfile.toml  LICENSE  README.md  pyproject.toml
examples/: .gitignore  npm_ls.json
src/plockalyser/: analyses.py  cli.py  dot.py  markdown.py
