[project]
name = "plockalyser"
version = "0.1.0"
description = "Utility for performing rudimentary analysis on npm package dependencies from an npm lock file."
readme = "README.md"
requires-python = ">=3.13"
# scipy is needed for pagerank calculation in networkx
dependencies = ["networkx", "numpy", "scipy", "pydantic", "ruff"]
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
plockalyser = "plockalyser.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plockalyser"]
