[project]
name = "plockalyser"
dynamic = ["version"]
description = "Utility for performing rudimentary analysis on npm package dependencies from an npm lock file."
readme = "README.md"
requires-python = ">=3.13"
# scipy is needed for pagerank calculation in networkx
dependencies = ["networkx", "numpy", "scipy", "pydantic", "ruff"]
authors = [{ name = "Rikard Gillemyr", email = "rikard.gillemyr@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
plockalyser = "plockalyser.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plockalyser"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"
